# baxter_ros2_simulation

./: CMakeLists.txt  README.md  package.xml
config/: baxter.rviz
launch/: display.launch.py
urdf/: baxter.urdf  baxter.urdf.xacro  left_end_effector.urdf.xacro  right_end_effector.urdf.xacro
urdf/baxter_base/: baxter_base.urdf.xacro
urdf/electric_gripper/: rethink_electric_gripper.xacro
urdf/electric_gripper/fingers/: basic_hard_tip.xacro  basic_soft_tip.xacro  extended_narrow.xacro  extended_wide.xacro  half_round_tip.xacro  paddle_tip.xacro  standard_narrow.xacro  standard_wide.xacro
urdf/pedestal/: pedestal.xacro
